test/errors/unhandled_return_value.dmd
add(4, 7)

function add(a, b) a + b

--- Output
Unhandled return value

1| add(4, 7)
   ^^^
---
